[b][color=orange]v4.17[/color], 22.04.2019[/b][list]
[*]Add some hidden alerts. Muhahaha.
[*]Updateded options for Minimap Buttons.
[*]Added incompatibility popups for ElvUI_WindTools & ElvUI_LivvenUI.[/list]

[b][color=orange]v4.16a[/color], 19.04.2019[/b][list]
[*]Fix lua errors in AutoButton. >.>[/list]

[b][color=orange]v4.16[/color], 19.04.2019[/b][list]
[*]Rename the movers for AutoButtons.
[*]Added Masque support for the AutoButtons.
[*]Rename Bindingtext for AutoButtons.
[*]Override ElvUI's min scale for Aura's.
[*]Enable Crucible of the Storm in Progress.[/list]

[b][color=orange]v4.15a[/color], 14.04.2019[/b][list]
[b]Fixed a lua error. >.>[/list]

[b][color=orange]v4.15[/color], 14.04.2019[/b][list]
[*]Added an Emoticon Frame to the chat.
[*]Fixed some lua errors if you use Dual Profiles.
[*]Added Target Name to the ElvUI Nameplate Castbars.
[*]Added a Talent Manager, where you can save different presets.
[*]Added back my chatBar. Disabled by default.
[*]Added Raid Progress Info to the Tooltip (hold shift).[/list]

[b][color=orange]v4.14[/color], 07.04.2019[/b][list]
[*]Prevent a lua error in Reminder Module.
[*]Alot of more Nameplate settings in my install.
[*]Update the appearance for my FlightPoints frame.
[*]Added Azerite Item Tooltip back.
[*]Minor tweaks to Unitframe install.
[*]Add Guildbest Frame on the LFG Frame > Mythic Keystones.
[*]Chinese Locals from Simon@ciki <3.[/list]

[b][color=orange]v4.13[/color], 12.03.2019[/b][list]
[*]Remove my own System DataText i use now the ElvUI Datatext.
[*]Removed Chat Menu, i never used it.
[*]Removed Chat Buttons.
[*]Adjust the Layout due to the new Voice Chat Buttons.
[*]Add new Nameplate settings to my Layout/CVar Install steps.
[*]Small UnitFrame settings update.[/list]

[b][color=orange]v4.12[/color], 25.02.2019[/b][list]
[*]Adjust my ActionBar appereance. Looks nice with my new Masque skin.
[*]Take account the the new ItemLevel Font changes.[/list]

[b][color=orange]v4.11[/color], 24.02.2019[/b][list]