@@ -1,3 +1,13 @@
+[b][color=orange]v4.18[/color], 15.05.2019[/b][list]
+[*]Added a shield icon to Nameplate Castbar for non interruptible casts.
+[*]Added an Advanced Merchant Frame (for Vendors). Credits S&L
+[*]Attempt to prevent a nil error in itemLevel.
+[*]Added an GCD spark below the Player UnitFrames.
+[*]Added a Call to Arms Alert.
+[*]Added right click functionality to my MerathilisUI Panels to temp hide the Middle Datatext.
+[*]Added a RaidCD Module. Credits Klix.
+[*]Added RaiderIO Styling support.[/list]
+
 [b][color=orange]v4.17[/color], 22.04.2019[/b][list]
 [*]Add some hidden alerts. Muhahaha.
 [*]Updateded options for Minimap Buttons.
